# FaceRebuild

./: .gitignore  CMakeLists.txt  FaceRebuild Presentation.pptx  Readme.txt
include/: IMeshGenerator.h  NiftiViewer.h  filemanager.h  imageprocessor.h  itktovtkconverter.h  mainwindow.h  meshgenerator.h  parallelmeshgenerator.h  renderermanager.h  scrollinteractorstyle.h  serialmeshgenerator.h
src/: NiftiViewer.cpp  filemanager.cpp  imageprocessor.cpp  itktovtkconverter.cpp  main.cpp  mainwindow.cpp  meshgenerator.cpp  parallelmeshgenerator.cpp  renderermanager.cpp  scrollinteractorstyle.cpp  serialmeshgenerator.cpp
ui/: mainwindow.ui
